--- a/components.json
+++ b/components.json
@@ -11,6 +11,6 @@
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/src/app/lib/utils"
+    "utils": "@/app/lib/utils"
   }
 }
