--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "lucide-react": "^0.287.0",
     "next": "13.5.5",
     "next-auth": "^4.23.2",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-wrap-balancer": "^1.1.0",
+    "rehype-highlight": "6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
