--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-wrap-balancer": "^1.1.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-highlight": "6.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
