--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.287.0",
-    "next": "13.5.5",
+    "next": "^14.0.2",
     "next-auth": "^4.23.2",
     "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
