--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.4",
+    "@giscus/react": "^2.3.0",
     "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-avatar": "^1.0.4",
